--- a/.gitignore
+++ b/.gitignore
@@ -32,11 +32,11 @@ sites/simpletest
 # or delete the previous settings and uncomment the following ones, instead.
 
 # Ignore configuration files that may contain sensitive information.
-# */settings*.php
+*/settings.lando.php
 
 # Ignore paths that contain user-generated content.
-# */files
-# */private
+*/files
+*/private
 
 # Ignore multi-site test environment.
 # simpletest
