--- a/.lando.yml
+++ b/.lando.yml
@@ -41,3 +41,8 @@ proxy:
     - pma.cin_project.local.com
   mailhog:
     - mailhog.cin_project.local.com
+events:
+  post-db-import:
+    - echo "Clearing site cache."
+    - appserver: cd "${LANDO_WEBROOT}" && drush cr > /dev/null
+    - appserver: cd "${LANDO_WEBROOT}" && drush pm:en admin_toolbar, admin_toolbar_tools, admin_toolbar_search, cin_project_core, cin_project_search_and_replace, gin_toolbar  -y
